# penneyproject

./: .gitignore  README.md  main.py  penneyapp.tcss  pyproject.toml  test.py  testnotebook.ipynb
data/: decktest.txt
data/decktest2_decks/: metadata.json
data/decktest_deck4_decks/: metadata.json
data/decktest_decks/: metadata.json
data/testcase_decks/: metadata.json
scores/: scoretest.csv
src/: __init__.py  cards.py  deckgen.pyx  decks.py  fastmatch.pyx  fastmatch_simd.pyx  hatch_build.py  heatmaps.py  parser.py  parser.pyx  saving.py  scores.py  scoring.py  setup.py  todo.txt
