[project]
name = "penneyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "Cython>=3.2.4",
    "seaborn>=0.13.2",
    "textual>=8.0.0",
    "textual-dev>=1.8.0",
]

[build-system]
requires = [
    "hatchling>=1.27",
    "setuptools>=68",
    "Cython>=3.2.4",
    "numpy>=2.4.2",
]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "README.md",
    "pyproject.toml",
    "src/**/*.py",
    "src/**/*.pyx",
    "src/**/*.pxd",
    "src/**/*.so",
    "src/**/*.pyd",
    "src/**/*.dylib",
]

[tool.hatch.build.hooks.custom]
path = "src/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = [
    "src/*.so",
    "src/*.pyd",
    "src/*.dylib",
]

[tool.uv.extra-build-dependencies]
parser = ["Cython>=3.2.4"]
